# Quera-Solutions

./: .gitignore  LICENSE  README.MD
Django/: .gitignore
Django/Cinema/: pyproject.toml
Django/Cinema/Cinema/: settings.py
Django/Cinema/app/: views.py
Django/Cinema/app/fixtures/: movies.json  seats.json
Django/Meysam Library/app/: views.py
Django/Quera Contest/: Pipfile  manage.py
Django/Quera Contest/accounts/: admin.py  models.py  serializers.py  urls.py  validators.py  views.py
Django/Quera Contest/contests/: admin.py  models.py  query.py
Django/Quera Contest/problems/: admin.py  models.py
Django/Quera Contest/quera_contest/: asgi.py  settings.py  urls.py  wsgi.py
Django/Quera Contest/tests/: testsample.py
Django/blog/: Pipfile
Django/blog api/: Pipfile
Django/blog api/Blog/: settings.py
Django/blog api/app/: permissions.py  serializers.py
Django/blog/Challenge/: settings.py
Django/blog/blog/: models.py
Django/cabin/cabin/: models.py  queries.py
Django/cabin/challenge/: settings.py
Django/commandline/: Pipfile  company.csv  requirements.txt
Django/commandline/config/: settings.py
Django/doobestan/: requirements.txt
Django/doobestan/Proj/: db_Router.py  settings.py
Django/doobestan/doob/: views.py
Django/farsization/: Pipfile
Django/jalali calender/: Pipfile
Django/jitsi/: Pipfile  pyproject.toml
Django/migration/: Pipfile
Django/querashop_queries/: Pipfile  requirements.txt
Django/railway/: railway.py  test_sample.py
Django/shop/: Pipfile
Golang/initial/: main.go  main_sample_test.go
(+43 files in other folders)
