[tool.poetry]
name = "cinema"
version = "0.1.0"
description = ""
authors = ["MrRezoo <rezam578@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.7"
pyyaml = "^6.0"
pytz = "^2022.7.1"
django-extensions = "^3.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
